# messenger-cli

./: .gitignore  CHANGES.md  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  meson.build
.github/workflows/: linux.yml
snap/: snapcraft.yaml  snapcraft.yml
src/: Makefile.am  application.c  application.h  chat.c  chat.h  meson.build  messenger_cli.c  util.c  util.h
src/ui/: Makefile.am  account_create.c  account_create.h  account_create_dialog.c  account_create_dialog.h  accounts.c  accounts.h  chat.h  chat_open_dialog.c  chat_open_dialog.h  chats.c  chats.h  list_input.h  lobby_create_dialog.c  lobby_create_dialog.h  lobby_enter_dialog.c  lobby_enter_dialog.h  members.c  members.h  messages.c  messages.h  text_input.h
