# This Makefile.am is in the public domain

lib_LIBRARIES = libui.a

libui_a_SOURCES = \
  account_create_dialog.c account_create_dialog.h \
  accounts.c accounts.h \
  chat.h \
  chat_open_dialog.c chat_open_dialog.h \
  chats.c chats.h \
  list_input.h \
  lobby_create_dialog.c lobby_create_dialog.h \
  lobby_enter_dialog.c lobby_enter_dialog.h \
  members.c members.h \
  messages.c messages.h \
  text_input.h

